--- a/src/demo-app/tab-group/tab-group-demo.scss
+++ b/src/demo-app/tab-group/tab-group-demo.scss
@@ -3,4 +3,7 @@
   .md-tab-header {
     background: #f9f9f9;
   }
+  .md-tab-body {
+    padding: 12px;
+  }
 }
